--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,38 @@
-
-.user_form{
+.user_form {
+  width: 50%;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 
-input{
+.input_sexction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input,
+button {
   margin: 10px;
+  width: 50%;
+  font-size: 18px;
+}
+
+.table {
+  width: 100%;
+}
+
+td {
+  border: 1px solid black;
+  border-width: 0 0 2px 0;
+}
+
+.heder_tr th {
+  padding: 10px;
+  background-color: rgb(0, 8, 255);
+  color: #fff;
 }
